--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <spring.version>5.2.6.RELEASE</spring.version>
         <logback.version>1.2.3</logback.version>
+        <fastjson.version>1.2.83</fastjson.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -91,8 +92,23 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.24</version>
             </dependency>
-        </dependencies>
+            <dependency>
+                <groupId>com.shopee.bankingcommonframework</groupId>
+                <artifactId>bcf-common</artifactId>
+                <version>2.5.0-RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>4.1.2</version>
+            </dependency>
 
+        </dependencies>
     </dependencyManagement>
 
 </project>
